change the way to generate code of server  - use codgen-server.go to create swagger-server.yaml  - make codegen-server.go to create path.yaml and components.yaml besides swagger-server.yaml  - generate components from ent schema.
