# ent/apiresponse_delete.go
@@ -1,0 +1,108 @@
+// Code generated by entc, DO NOT EDIT.
+
+package ent
+
+import (
+	"context"
+	"fmt"
+
+	"github.com/facebook/ent/dialect/sql"
+	"github.com/facebook/ent/dialect/sql/sqlgraph"
+	"github.com/facebook/ent/schema/field"
+	"github.com/godpeny/goserv/ent/apiresponse"
+	"github.com/godpeny/goserv/ent/predicate"
+)
+
+// APIResponseDelete is the builder for deleting a APIResponse entity.
+type APIResponseDelete struct {
+	config
+	hooks    []Hook
+	mutation *APIResponseMutation
+}
+
+// Where adds a new predicate to the delete builder.
+func (ard *APIResponseDelete) Where(ps ...predicate.APIResponse) *APIResponseDelete {
+	ard.mutation.predicates = append(ard.mutation.predicates, ps...)
+	return ard
+}
+
+// Exec executes the deletion query and returns how many vertices were deleted.
+func (ard *APIResponseDelete) Exec(ctx context.Context) (int, error) {
+	var (
+		err      error
+		affected int
+	)
+	if len(ard.hooks) == 0 {
+		affected, err = ard.sqlExec(ctx)
+	} else {
+		var mut Mutator = MutateFunc(func(ctx context.Context, m Mutation) (Value, error) {
+			mutation, ok := m.(*APIResponseMutation)
+			if !ok {
+				return nil, fmt.Errorf("unexpected mutation type %T", m)
+			}
+			ard.mutation = mutation
+			affected, err = ard.sqlExec(ctx)
+			mutation.done = true
+			return affected, err
+		})
+		for i := len(ard.hooks) - 1; i >= 0; i-- {
+			mut = ard.hooks[i](mut)
+		}
+		if _, err := mut.Mutate(ctx, ard.mutation); err != nil {
+			return 0, err
+		}
+	}
+	return affected, err
+}
+
+// ExecX is like Exec, but panics if an error occurs.
+func (ard *APIResponseDelete) ExecX(ctx context.Context) int {
+	n, err := ard.Exec(ctx)
+	if err != nil {
+		panic(err)
+	}
+	return n
+}
+
+func (ard *APIResponseDelete) sqlExec(ctx context.Context) (int, error) {
+	_spec := &sqlgraph.DeleteSpec{
+		Node: &sqlgraph.NodeSpec{
+			Table: apiresponse.Table,
+			ID: &sqlgraph.FieldSpec{
+				Type:   field.TypeInt,
+				Column: apiresponse.FieldID,
+			},
+		},
+	}
+	if ps := ard.mutation.predicates; len(ps) > 0 {
+		_spec.Predicate = func(selector *sql.Selector) {
+			for i := range ps {
+				ps[i](selector)
+			}
+		}
+	}
+	return sqlgraph.DeleteNodes(ctx, ard.driver, _spec)
+}
+
+// APIResponseDeleteOne is the builder for deleting a single APIResponse entity.
+type APIResponseDeleteOne struct {
+	ard *APIResponseDelete
+}
+
+// Exec executes the deletion query.
+func (ardo *APIResponseDeleteOne) Exec(ctx context.Context) error {
+	n, err := ardo.ard.Exec(ctx)
+	switch {
+	case err != nil:
+		return err
+	case n == 0:
+		return &NotFoundError{apiresponse.Label}
+	default:
+		return nil
+	}
+}
+
+// ExecX is like Exec, but panics if an error occurs.
+func (ardo *APIResponseDeleteOne) ExecX(ctx context.Context) {
+	ardo.ard.ExecX(ctx)
+}
